# ai-apply

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  docker-compose.yml2026  pyproject.toml
.github/workflows/: ci.yml
services/api/: Dockerfile  Dockerfile-2026  pyproject.toml
services/api/alembic/: env.py  script.py.mako
services/api/alembic/versions/: 0001_initial.py
services/api/app/: main.py
services/api/app/core/: config.py  logging.py
services/api/app/models/: job.py  run.py  user.py
services/api/app/routers/: agent.py  jobs.py  runs.py
services/worker/: Dockerfile  Dockerfile-2026  pyproject.toml
services/worker/worker/: celery_app.py
services/worker/worker/tasks/: documents.py  jd_extract.py
