[project]
name = "ai-apply-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
