[project]
name = "ai-apply-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "celery>=5.4",
  "redis>=5.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "openai>=1.0.0"
]

[tool.uv]
dev-dependencies = ["ruff>=0.5", "pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

